tests/cases/expected-token.stderr
error: expected identifier
  --> $DIR/expected-token.rs:10:10
   |
10 |         <@>
   |          ^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

